# kinescope_tms

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260508_0001_create_users.py  20260508_0002_create_projects_sections_test_cases.py  20260512_0003_create_bugs.py  20260512_0004_create_test_runs.py  20260701_0005_test_run_share_token.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  bugs.py  health.py  imports.py  projects.py  public.py  router.py  sections.py  test_cases.py  test_runs.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: bug.py  project.py  section.py  test_case.py  test_run.py  user.py
backend/app/models/: __init__.py  base.py  bug.py  project.py  section.py  test_case.py  test_run.py  user.py
backend/app/schemas/: auth.py  bug.py  project.py  section.py  test_case.py  test_run.py  user.py
backend/app/services/: auth.py  import_xlsx.py  run_report.py
backend/scripts/: entrypoint.sh
docs/: deploy-migration.md  qa-guide.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: bugs.ts  client.ts  imports.ts  projects.ts  sections.ts  testCases.ts  testRuns.ts  users.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx  permissions.ts
frontend/src/components/: BugFormDialog.tsx  (+12 more)
(+19 files in other folders)
